--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'handwriting';
+  font-weight: 400;
+  src: url('./Public/Give_You_Glory/GiveYouGlory-Regular.ttf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
