--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -57,3 +57,9 @@ input {
     transform: rotate(360deg);
   }
 }
+
+.button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
